--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -14,13 +14,13 @@
     <item
         android:id="@+id/events"
         android:enabled="true"
-        android:icon="@drawable/events"
+        android:icon="@drawable/ic_event"
         android:title="@string/events"/>
 
     <item
         android:id="@+id/accomodations"
         android:enabled="true"
-        android:icon="@drawable/accomodations"
+        android:icon="@drawable/ic_akomodasi"
         android:title="@string/accomodations"/>
 
 </menu>
