--- a/app/src/main/res/layout/destinasi_item.xml
+++ b/app/src/main/res/layout/destinasi_item.xml
@@ -34,7 +34,7 @@
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/tc_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="68dp"
