--- a/app/src/main/res/layout/secondary_card.xml
+++ b/app/src/main/res/layout/secondary_card.xml
@@ -2,10 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="240dp"
     android:layout_height="125dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card"
         android:layout_width="225dp"
         android:layout_height="match_parent"
         android:layout_marginStart="15dp"
@@ -17,6 +19,58 @@
         app:layout_constraintVertical_bias="0.0"
         card_view:cardBackgroundColor="#CACACA"
         card_view:cardCornerRadius="5dp"
-        card_view:cardElevation="8dp"/>
+        card_view:cardElevation="8dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/sc_title"
+                style="@style/cardTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="157dp"
+                android:maxLines="1"
+                android:text="@string/title_sample" />
+
+            <TextView
+                android:id="@+id/sc_location"
+                style="@style/cardLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="12dp"
+                android:text="@string/location_sample"
+                tools:layout_marginBottom="10dp" />
+
+            <TextView
+                android:id="@+id/sc_date"
+                style="@style/cardTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/sc_location"
+                android:layout_below="@+id/sc_title"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="29dp"
+                android:maxLines="1"
+                android:text="@string/date_sample"
+                tools:layout_marginTop="5dp" />
+
+            <ImageView
+                android:id="@+id/cardBackground"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:translationZ="-1dp"
+                tools:srcCompat="@tools:sample/avatars" />
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
