--- a/app/src/main/res/layout/third_card.xml
+++ b/app/src/main/res/layout/third_card.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="185dp"
     android:layout_height="150dp">
 
@@ -18,40 +17,6 @@
         app:layout_constraintVertical_bias="0.0"
         card_view:cardBackgroundColor="#CACACA"
         card_view:cardCornerRadius="5dp"
-        card_view:cardElevation="8dp" >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/tc_title"
-                style="@style/cardTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:text="@string/title_sample" />
-
-            <TextView
-                android:id="@+id/tc_location"
-                style="@style/cardLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="10dp"
-                android:layout_marginBottom="10dp"
-                android:gravity="bottom"
-                android:text="@string/location_sample" />
-
-            <ImageView
-                android:id="@+id/thirdCardBackground"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:translationZ="-1dp"
-                tools:srcCompat="@tools:sample/avatars" />
-        </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
+        card_view:cardElevation="8dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
