--- a/app/src/main/res/layout/fragment_destinasi.xml
+++ b/app/src/main/res/layout/fragment_destinasi.xml
@@ -27,7 +27,7 @@
             tools:layout_editor_absoluteY="0dp" />
 
         <TextView
-            android:id="@+id/tc_location"
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="48dp"
@@ -56,7 +56,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.486"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tc_location"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
             app:previousButtonMargin="8dp"
             app:scaleOnScroll="true"
             app:scalingFactor=".25"
